--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>1.8.1</version>
         </dependency>
+        <!-- Kafka Dependencies-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.13</artifactId>
+            <version>4.1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
