--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>2.19.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-bulkhead</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
